# C---Sample-Project

./: CMakeLists.txt  README.md
include/: time_utils.h
src/: time_utils.c
test/: time_utils_test.cpp
